<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home"
        android:title="@string/home" />


    <item
        android:id="@+id/policy"
        android:icon="@drawable/baseline_privacy_tip_24"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/baseline_share"
        android:title="@string/share" />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/baseline_rate_review_24"
        android:title="@string/rate_update" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/more_app"
        android:title="@string/more_app" />

    <item android:title="Developer"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/website"
                android:icon="@drawable/baseline_web_24"
                android:title="Website"/>
            <item
                android:id="@+id/fb"
                android:icon="@drawable/baseline_account_box_24"
                android:title="Facebook" />
            <item
                android:id="@+id/yt"
                android:icon="@drawable/baseline_slow_motion_video_24"
                android:title="Youtube" />
        </menu>

    </item>


</menu>