<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_actionbar" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:importantForAccessibility="no"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_marginTop="-80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/Card1"
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:orientation="vertical"

                        tools:ignore="UselessLeaf">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/website"
                                tools:ignore="ImageContrastCheck" />

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/baseline_arrow"
                                tools:ignore="ImageContrastCheck" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:paddingRight="10dp"
                            android:text="@string/shorts"
                            android:textColor="#3F51B5"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/short_text"
                            android:textColor="@color/white"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/Card3"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/gradient"
                        android:layout_height="200dp"
                        tools:ignore="UselessLeaf,VisualLintBounds">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="80dp"
                                android:src="@drawable/book"
                                android:importantForAccessibility="no" />

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/baseline_emoji"
                                tools:ignore="ImageContrastCheck" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/learn"
                            android:textColor="#e45c58"
                            android:textSize="24sp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/Card2"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="140dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/gradient"
                        tools:ignore="UselessLeaf">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/more_app"
                                tools:ignore="ImageContrastCheck" />
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/baseline_touch"
                                tools:ignore="ImageContrastCheck" />



                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/more"
                            android:textColor="#006BBD"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="20dp"
                            android:text="@string/more_app_text"
                            android:textColor="@color/white"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/Card4"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/gradient"
                        tools:ignore="UselessLeaf">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="80dp"
                                android:src="@drawable/html_editor"
                                android:importantForAccessibility="no" />

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/baseline_code"
                                tools:ignore="ImageContrastCheck" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="22sp"
                            android:paddingTop="5dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/html_editor"
                            android:textColor="#3164DD"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="20dp"
                            android:text="@string/html_editors"
                            android:textColor="@color/white"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>